Fixed white space under footers

--- a/css/main.css
+++ b/css/main.css
@@ -214,6 +214,10 @@ body {
   width: 100%;
 }
 
+.thanks-fill {
+  background-color: #86BFAB;
+}
+
 
 /** FORM **/
 label {
@@ -232,6 +236,8 @@ textarea {
 }
 
 button {
+  display: block;
+  margin: 0 auto;
   padding: .5rem 1rem .5rem 1rem;
 
   color: white;
@@ -246,10 +252,19 @@ button:hover {
   background-color: white;
 }
 
+.form-page {
+  background-color: #86BFAB;
+}
+
+.form-content {
+  background-color: white;
+}
+
 /** FOOTER **/
 .footer {
 	background-color: #86BFAB;
 	overflow: hidden;
+  padding: 0;
 }
 
 .footer ul {
